@@ -1,3 +1,6 @@
+2021-06-28 Alexander Malysh <amalysh @ kannel.org>
+    * gwlib/http.c: fixed issue with not encoded user & pass in the URL
+
 2021-03-18  Stipe Tolj  <stolj at kannel.org>
     * gw/dlr_spool.c: fix error based memory leaks. NLC.
     
